--- a/index.html
+++ b/index.html
@@ -82,15 +82,15 @@
                                     <h6>Name Guest</h6>
                                 </div>
                                 <div class="position-relative" data-anim="fade-down">
-                                    <p>You're Invited To Wedding</p>
+                                    <p>We joyfully invite you to  celebrate our wedding</p>
                                 </div>
                                 <h1 class="title" data-anim="zoom-out">Steven & <br> Stella</h1>
                                 <div class="cover-event" data-anim="fade-up">
-                                    <p>13 Desember 2025</p>
+                                    <p>Saturday, 13 December 2025</p>
                                 </div>
                                 <div class="elements-widget">
                                     <button class="btn btn-custom" id="btn-envelope" data-anim="zoom-in">
-                                        <strong>Open The Invitation <i class="fas fa-envelope-open-text"></i></strong>
+                                        <strong>Open Invitation <i class="fas fa-envelope-open-text"></i></strong>
                                     </button>
                                 </div>
                             </div>
@@ -183,7 +183,7 @@
                                     <div class="header-title-content">
                                         <h1 class="title mb-3" data-anim="fade-down" data-anim-delay="1500">Steven <span>&</span> Stella</h1>
                                         <div class="position-relative" data-anim="zoom-out" data-anim-delay="1500">
-                                            <p>We're Getting Married</p>
+                                            <p>United in Love & Faith</p>
                                         </div>
                                         <div class="scroll-icon">
                                             <svg data-anim="slide-down" width="28" height="42" viewBox="0 0 28 42" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -210,7 +210,7 @@
                         </div>
                     </div>
                     <div class="reminder-content">
-                        <div class="countdown" date="12/31/2023 23:59:00" data-anim="fade-down">
+                        <div class="countdown" date="12/13/2025 18:00:00" data-anim="fade-down">
                             <div class="days">
                                 <p class="angka">00</p>
                                 <p class="huruf">Day</p>
@@ -273,7 +273,7 @@
                                                 <h2>Genesis 2:18</h2>
                                             </div>
                                             <div class="position-relative" data-anim="zoom-out">
-                                                <p>The Lord God said, 'It is not good for the man to be alone. I will make a helper suitable for him.</p>
+                                                <p>The Lord God said, "It is not good for the man to be alone. I will make a helper suitable for him."</p>
                                             </div>
                                         </div>
                                     </div>
@@ -400,10 +400,32 @@
                                     <div class="col-12 col-md-11 col-lg-10 mx-auto">
                                         <div class="story-description">
                                             <div class="title-section" data-anim="fade-down">
-                                                <h2>Our Story</h2>
+                                                <h2>In God’s Perfect Time</h2>
+                                            </div>
+                                            <div class="row justify-content-center my-4">
+                                                <div class="col-6 col-md-5 text-center">
+                                                    <img src="./assets/images/steven-baby.jpg" alt="Steven" class="img-fluid rounded mb-2">
+                                                    <h6>Steven</h6>
+                                                </div>
+                                                <div class="col-6 col-md-5 text-center">
+                                                    <img src="./assets/images/stella-baby.jpg" alt="Stella" class="img-fluid rounded mb-2">
+                                                    <h6>Stella</h6>
+                                                </div>
                                             </div>
                                             <div class="position-relative" data-anim="zoom-out">
-                                                <p>“Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus eligendi dolore blanditiis odio minima obcaecati atque veniam, quisquam modi adipisci perferendis dolorum deserunt tenetur commodi asperiores laudantium ab, quos fuga? Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus impedit labore quae, assumenda dolore laborum expedita eaque. Aliquid, explicabo, doloremque ex dolor ab ipsum ut laboriosam repellendus sit, quae eligendi! <br> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos ullam, illum ratione consequuntur animi facere fuga dolores provident, ipsum voluptatum inventore officiis itaque tenetur, labore dignissimos doloribus dolor tempore excepturi. <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat libero dolores autem ipsam rem odit. Deleniti quibusdam, labore, quod quae, praesentium ut voluptatem ipsa ducimus iure unde error ab. Deleniti?”</p>
+                                                <p>God’s timing is always perfect. He brought us together not by chance, but by His plan. From friendship to love, from love to a lifelong promise</p>
+                                                <br>
+                                                <p>It was at DisneySea Japan, amidst the magic and joy, that we marked the beginning of our journey together.</p>
+                                                <br>
+                                                <p>We are grateful to step into this covenant of marriage with Him at the center.</p>
+                                                <br>
+                                                <p>"Two are better than one, for they have a good return for their labor." — Ecclesiastes 4:9</p>
+                                                <br>
+                                            </div>
+                                            <div class="three-photo-row">
+                                                <img src="./assets/images/proposal1.jpg" alt="photo1">
+                                                <img src="./assets/images/proposal2.jpg" alt="photo2">
+                                                <img src="./assets/images/proposal3.jpg" alt="photo3">
                                             </div>
                                         </div>
                                     </div>
@@ -453,7 +475,7 @@
                                             <h2>Event & Venue</h2>
                                         </div>
                                         <div class="position-relative" data-anim="zoom-out">
-                                            <p>If you will be present at the event location. Please fill out the form below</p>
+                                            <p>We would love to celebrate with you! Please let us know by filling out the form below</p>
                                         </div>
                                     </div>
                                 </div>
@@ -469,7 +491,7 @@
                                                     <div class="ornaments-wrapper">
                                                         <div class="bg-1">
                                                             <div class="image-element">
-                                                                <img src="./assets/images/bg-card-2.png" alt="bg-card-2">
+                                                                <img src="./assets/images/Holmat.png" alt="Holmat">
                                                             </div>
                                                             <div class="overlay-elements-gradient overlay-top"></div>
                                                         </div>
@@ -480,7 +502,7 @@
                                                         <div class="date">
                                                             <h5>13/12/2025</h5>
                                                         </div>
-                                                        <p>11.00 - 13.00 WIB</p>
+                                                        <p>10.00 - 12.00 WIB</p>
                                                     </div>
                                                 </div>
                                                 <div class="event-place">
@@ -542,7 +564,7 @@
                                                     <div class="ornaments-wrapper">
                                                         <div class="bg-1">
                                                             <div class="image-element">
-                                                                <img src="./assets/images/bg-card-2.png" alt="bg-card-2">
+                                                                <img src="./assets/images/Reception.png" alt="Reception">
                                                             </div>
                                                             <div class="overlay-elements-gradient overlay-top"></div>
                                                         </div>
@@ -615,7 +637,7 @@
                                                     <div class="ornaments-wrapper">
                                                         <div class="bg-1">
                                                             <div class="image-element">
-                                                                <img src="./assets/images/bg-card-2.png" alt="bg-card-2">
+                                                                <img src="./assets/images/Afterparty.png" alt="Afterparty">
                                                             </div>
                                                             <div class="overlay-elements-gradient overlay-top"></div>
                                                         </div>
@@ -779,7 +801,7 @@
                                 <div class="card card-form">
                                     <div class="card-body">
                                         <div class="title-section" data-anim="fade-down">
-                                            <h2>Wedding Wishes</h2>
+                                            <h2>Words for Our Day</h2>
                                         </div>
                                         <form action="#" class="text-center" data-anim="fade-up">
                                             <div class="input-group mb-3">
@@ -904,7 +926,7 @@
                                 <div class=" title-section" data-anim="fade-left">
                                     <h2>E-Gift</h2>
                                     <p class="my-3" data-anim="zoom-out" style="font-size:0.875rem; line-height:1.5;">
-                                        The prayers and blessings of our family, friends, and loved ones are the greatest gifts we could ever ask for on our wedding day. However, if giving is a way of sharing your love, we will gratefully receive it, as it will truly add to our joy.
+                                        Your prayers and blessings are the greatest gifts we could ever ask for. Should you wish to share your love in another way, we will gratefully receive it with joy.
                                     </p>
                                 </div>
                                 <div class="tabs-gift">
@@ -986,6 +1008,17 @@
                                                 <a href="./assets/images/photo11.jfif">
                                                     <img src="./assets/images/photo11.jfif" alt="img-gallery" class="img-gallery" />
                                                 </a>
+                                            </li>
+                                            <li class="splide__slide position-relative">
+                                                <a href="./assets/images/photo12.jfif">
+                                                    <img src="./assets/images/photo12.jfif" alt="img-gallery" class="img-gallery" />
+                                                </a>
+                                            </li>
+                                            <li class="splide__slide position-relative">
+                                                <a href="./assets/images/photo13.jfif">
+                                                    <img src="./assets/images/photo13.jfif" alt="img-gallery" class="img-gallery" />
+                                                </a>
+                                            </li>
                                         </ul>
                                     </div>
                                 </div>
@@ -1085,7 +1118,7 @@
                                             <h2>Thank You</h2>
                                         </div>
                                         <div class="position-relative" data-anim="zoom-out">
-                                            <p>Thank you for your presence, participation and blessing.</p>
+                                            <p>See you at the celebration!</p>
                                         </div>
                                     </div>
                                 </div>
