--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
             };
         </script>
 
+
+
+
         <!-- progress -->
         <div class="progress"></div>
 
@@ -61,20 +64,13 @@
             <div class="ornaments-wrapper">
                 <div class="bg-1">
                     <div class="image-element">
-                        <img src="./assets/images/bg-3.png" alt="bg-3" class="img-fluid">
+                        <img src="./assets/images/background-1.png" alt="background-1" class="img-fluid">
                     </div>
                 </div>
             </div>
             <div class="container">
                 <div class="cover-wrapper">
-                    <div class="cover-content color-primary">
-                        <div class="ornaments-wrapper overflow-hidden">
-                            <div class="bg-2">
-                                <div class="image-element">
-                                    <img src="./assets/images/bg-1.png" alt="bg-1" class="img-fluid">
-                                </div>
-                            </div>
-                        </div>
+                    <div class="cover-content" data-anim="slide-up">
                         <div class="cover-body">
                             <div class="cover-description">
                                 <div class="greeting-wrapper" data-anim="fade-down">
@@ -548,6 +544,15 @@
                                                             </div>
                                                             <h4>Chapel of the Ursuline Convent of Santa Maria</h4>
                                                             <p>Jl. Ir. H. Juanda No.29, RT.1/RW.3, Kb. Klp., Kecamatan Gambir, Kota Jakarta Pusat, Daerah Khusus Ibukota Jakarta 10120</p>
+                                                            <!-- Dress Code Section -->
+                                                            <div class="dress-code" data-anim="fade-up">
+                                                                <h4>Dress Code</h4>
+                                                                <p>Elegant Formal</p>
+                                                                    <div class="dresscode-photo">
+                                                                        <img src="./assets/images/elegant-formal.png" alt="elegant-formal">
+                                                                    </div>
+                                                                <p>We kindly request no batik attire</p>
+                                                            </div>
                                                             <div class="widget-elements">
                                                                 <a class="btn btn-custom mt-3" aria-label="button maps" href="#" data-bs-toggle="modal" data-bs-target="#event1">See Location</a>
                                                             </div>
@@ -621,6 +626,15 @@
                                                             </div>
                                                             <h4>Hotel Borobudur Jakarta (Backyard Garden)</h4>
                                                             <p>Jl. Lap. Banteng Selatan No.1, Ps. Baru, Kecamatan Sawah Besar, Kota Jakarta Pusat, Daerah Khusus Ibukota Jakarta 10710</p>
+                                                            <!-- Dress Code Section -->
+                                                            <div class="dress-code" data-anim="fade-up">
+                                                                <h4>Dress Code</h4>
+                                                                <p>Formal Black (Garden Party)</p>
+                                                                    <div class="dresscode-photo">
+                                                                        <img src="./assets/images/formal-black.png" alt="formal-black">
+                                                                    </div>
+                                                                <p>As it's a garden party, kindly choose formal attire you'll feel comfortable in</p>
+                                                            </div>
                                                             <div class="widget-elements">
                                                                 <a class="btn btn-custom mt-3" aria-label="button maps" href="#" data-bs-toggle="modal" data-bs-target="#event2">See Location</a>
                                                             </div>
@@ -711,11 +725,6 @@
                 </section>
                 <!-- rsvp section -->
                 <section class="rsvp-section">
-                    <div class="image-wrapper">
-                        <div class="image-element">
-                            <img src="./assets/images/background-3.webp" alt="venue-background">
-                        </div>
-                    </div>
                     <div class="ornaments-wrapper overflow-hidden">
                         <div class="bg-1">
                             <div class="image-element">
@@ -803,6 +812,10 @@
                                         <div class="title-section" data-anim="fade-down">
                                             <h2>Words for Our Day</h2>
                                         </div>
+                                        <div class="image-element">
+                                            <img src="./assets/images/background-3.png" alt="background-3" class="img-fluid">
+                                        </div>
+                                        <br>
                                         <form action="#" class="text-center" data-anim="fade-up">
                                             <div class="input-group mb-3">
                                                 <span class="input-group-text"><i class="fas fa-user"></i></span>
