--- a/index.html
+++ b/index.html
@@ -1271,23 +1271,14 @@ document.addEventListener("DOMContentLoaded", () => {
                     </div>
                     <div class="col-12 mt-3">
                         <div class="maps-element">
-                            <div class="loader-wrapper-modal">
-                                <div class="lds-default">
-                                    <div></div>
-                                    <div></div>
-                                    <div></div>
-                                    <div></div>
-                                    <div></div>
-                                    <div></div>
-                                    <div></div>
-                                    <div></div>
-                                    <div></div>
-                                    <div></div>
-                                    <div></div>
-                                    <div></div>
-                                </div>
-                            </div>
-                            <iframe class="maps-embed" width="100%" height="328" id="gmap_canvas" data-src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3966.69721619795!2d106.8335706748542!3d-6.171280793816051!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69f5cbf4ede0c9%3A0x414e883564db60b4!2sGrand%20Manhattan%20Club!5e0!3m2!1sid!2sid!4v1759594066067!5m2!1sid!2sid" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+                             <div class="map-embed">
+                          <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3966.69721619795!2d106.8335706748542!3d-6.171280793816051!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69f5cbf4ede0c9%3A0x414e883564db60b4!2sGrand%20Manhattan%20Club!5e0!3m2!1sid!2sid!4v1759594066067!5m2!1sid!2sid"
+                            allowfullscreen=""
+                            loading="lazy"
+                            referrerpolicy="no-referrer-when-downgrade">
+                          </iframe>
+                        </div>
                         </div>
                         <a href="https://maps.app.goo.gl/jbQakj32wawvvznCA" 
                            class="btn btn-custom mt-3" 
@@ -1295,7 +1286,7 @@ document.addEventListener("DOMContentLoaded", () => {
                            rel="noopener noreferrer">
                           View Location
                         </a>
-                    </div>
+                    </div>         
                 </div>
             </div>
         </div>
