--- a/index.html
+++ b/index.html
@@ -483,11 +483,11 @@ document.addEventListener("DOMContentLoaded", () => {
                                             <div class="row justify-content-center my-4">
                                                 <div class="col-6 col-md-5 text-center">
                                                     <img src="./assets/images/steven-baby.jpg" alt="Steven" class="img-fluid rounded mb-2">
-                                                    <h6>Steven</h6>
+                                                    <h3>Steven</h3>
                                                 </div>
                                                 <div class="col-6 col-md-5 text-center">
                                                     <img src="./assets/images/stella-baby.jpg" alt="Stella" class="img-fluid rounded mb-2">
-                                                    <h6>Stella</h6>
+                                                    <h3>Stella</h3>
                                                 </div>
                                             </div>
                                             <div class="position-relative" data-anim="zoom-out" style="text-align: justify;">
@@ -500,18 +500,14 @@ document.addEventListener("DOMContentLoaded", () => {
                                             </div>
                                             <div class="position-relative" data-anim="zoom-out" style="text-align: center;">
                                                 <p>Ecclesiastes 4:9</p>
-                                                <br>
-                                            </div>
-                                            <div class="three-photo-row">
-                                                <img src="./assets/images/proposal1.jpg" alt="photo1">
-                                                <img src="./assets/images/proposal2.jpg" alt="photo2">
-                                                <img src="./assets/images/proposal3.jpg" alt="photo3">
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
+                    <div class="three-photo-row"style="position: relative; z-index: 10;">
+                        <img src="./assets/images/proposal.jpg" alt="proposal" class="img-fluid">
                     </div>
                 </div>
             </section>
@@ -572,6 +568,7 @@ document.addEventListener("DOMContentLoaded", () => {
                                                             <div class="overlay-elements-gradient overlay-top"></div>
                                                         </div>
                                                     </div>
+                                                    <h4>  </h4>
                                                     <h4 data-anim="fade-down">Holy Matrimony</h4>
                                                     <div class="event-name-body" data-anim="zoom-out">
                                                         <p>Saturday</p>
@@ -654,6 +651,7 @@ document.addEventListener("DOMContentLoaded", () => {
                                                             <div class="overlay-elements-gradient overlay-top"></div>
                                                         </div>
                                                     </div>
+                                                    <h4>  </h4>
                                                     <h4 data-anim="fade-down">Wedding Reception</h4>
                                                     <div class="event-name-body" data-anim="zoom-out">
                                                         <p>Saturday</p>
@@ -736,7 +734,8 @@ document.addEventListener("DOMContentLoaded", () => {
                                                             <div class="overlay-elements-gradient overlay-top"></div>
                                                         </div>
                                                     </div>
-                                                    <h4 data-anim="fade-down">Afterparty</h4>
+                                                    <h4><br></h4>
+                                                    <h4 data-anim="fade-down">After Party</h4>
                                                     <div class="event-name-body" data-anim="zoom-out">
                                                         <p>Saturday</p>
                                                         <div class="date">
@@ -800,7 +799,6 @@ document.addEventListener("DOMContentLoaded", () => {
                                 </div>
                             </div>
                         </div>
-
                     </div>
                 </section>
                 <!-- rsvp section -->
@@ -819,6 +817,12 @@ document.addEventListener("DOMContentLoaded", () => {
                                     <div class="rsvp-form">
                                         <div class="title-section" data-anim="fade-down">
                                             <h2>RSVP</h2>
+                                        </div>
+                                        <div class="image-element">
+                                            <img src="./assets/images/RSVP.png" alt="RSVP" class="img-fluid">
+                                        </div>
+                                        <div class="title-section" data-anim="fade-down">
+                                            <h2> </h2>
                                         </div>
                                         <form action="#" data-anim="fade">
                                             <div class="input-group mb-3">
@@ -1068,7 +1072,6 @@ document.addEventListener("DOMContentLoaded", () => {
 });
 </script>
 
-
                                                 </div>
                                             </div>
                                         </div>
@@ -1083,6 +1086,25 @@ document.addEventListener("DOMContentLoaded", () => {
             
             <!-- Egift section -->
             <section class="egift-section moveable-section" data-id="5">
+                <div class="ornaments-wrapper overflow-hidden">
+                    <div class="bg-1">
+                        <div class="image-element">
+                            <img src="./assets/images/bg-1.png" alt="bg-1" class="img-fluid">
+                        </div>
+                    </div>
+                </div>
+                <div class="ornaments-wrapper">
+                    <div class="orn-1">
+                        <div class="image-element">
+                            <img src="./assets/images/flower-1.png" alt="flower-1" class="img-fluid animate-loop" data-anim="rotate-left">
+                        </div>
+                    </div>
+                    <div class="orn-2">
+                        <div class="image-element">
+                            <img src="./assets/images/flower-1.png" alt="flower-1" class="img-fluid animate-loop" data-anim="rotate-left">
+                        </div>
+                    </div>
+                </div>
                 <div class="container position-relative">
                     <div class="row justify-content-center">
                         <div class="col-md-8 text-center position-relative">
@@ -1127,6 +1149,9 @@ document.addEventListener("DOMContentLoaded", () => {
                                                     <img src="./assets/images/photo01.jfif" alt="img-gallery" class="img-gallery" />
                                             </li>
                                             <li class="splide__slide position-relative">
+                                                    <img src="./assets/images/photo02.jfif" alt="img-gallery" class="img-gallery" />
+                                            </li>
+                                            <li class="splide__slide position-relative">
                                                     <img src="./assets/images/photo03.jfif" alt="img-gallery" class="img-gallery" />
                                             </li>
                                             <li class="splide__slide position-relative">
@@ -1148,6 +1173,21 @@ document.addEventListener("DOMContentLoaded", () => {
                                             </li>
                                             <li class="splide__slide position-relative">
                                                     <img src="./assets/images/photo10.jfif" alt="img-gallery" class="img-gallery" />
+                                            </li>
+                                            <li class="splide__slide position-relative">
+                                                    <img src="./assets/images/photo11.jfif" alt="img-gallery" class="img-gallery" />
+                                            </li>
+                                            <li class="splide__slide position-relative">
+                                                    <img src="./assets/images/photo12.jfif" alt="img-gallery" class="img-gallery" />
+                                            </li>
+                                            <li class="splide__slide position-relative">
+                                                    <img src="./assets/images/photo13.jfif" alt="img-gallery" class="img-gallery" />
+                                            </li>
+                                            <li class="splide__slide position-relative">
+                                                    <img src="./assets/images/photo14.jfif" alt="img-gallery" class="img-gallery" />
+                                            </li>
+                                            <li class="splide__slide position-relative">
+                                                    <img src="./assets/images/photo15.jfif" alt="img-gallery" class="img-gallery" />
                                             </li>
                                         </ul>
                                     </div>
