--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://cdnjs.cloudflare.com">
 
     <!-- fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Baskerville+Italic:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css" integrity="sha512-10/jx2EXwxxWqCLX/hHth/vu2KY3jCF70dCQB8TSgNjbCVAC/8vai53GfMDrO2Emgwccf2pJqxct9ehpzG+MTw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- styles libraries -->
@@ -1188,6 +1188,15 @@ document.addEventListener("DOMContentLoaded", () => {
                                             </li>
                                             <li class="splide__slide position-relative">
                                                     <img src="./assets/images/photo15.jfif" alt="img-gallery" class="img-gallery" />
+                                            </li>
+                                            <li class="splide__slide position-relative">
+                                                    <img src="./assets/images/photo16.jfif" alt="img-gallery" class="img-gallery" />
+                                            </li>
+                                            <li class="splide__slide position-relative">
+                                                    <img src="./assets/images/photo17.jfif" alt="img-gallery" class="img-gallery" />
+                                            </li>
+                                            <li class="splide__slide position-relative">
+                                                    <img src="./assets/images/photo18.jfif" alt="img-gallery" class="img-gallery" />
                                             </li>
                                         </ul>
                                     </div>
