--- a/index.html
+++ b/index.html
@@ -165,7 +165,8 @@ document.addEventListener("DOMContentLoaded", () => {
                                 <div class="position-relative" data-anim="fade-down">
                                     <p>We joyfully invite you to  celebrate our wedding</p>
                                 </div>
-                                <h1 class="title" data-anim="zoom-out">Steven & <br> Stella</h1>
+                                <h1 class="title" data-anim="zoom-out">Steven & Stella</h1>
+                                <br>
                                 <div class="cover-event" data-anim="fade-up">
                                     <p>Saturday, 13 December 2025</p>
                                 </div>
@@ -265,6 +266,8 @@ document.addEventListener("DOMContentLoaded", () => {
                                         <h1 class="title mb-3" data-anim="fade-down" data-anim-delay="1500">Steven <span>&</span> Stella</h1>
                                         <div class="position-relative" data-anim="zoom-out" data-anim-delay="1500">
                                             <p>United in Love & Faith</p>
+                                            <br>
+                                            <p>#STEVoundSTELLA</p>
                                         </div>
                                         <div class="scroll-icon">
                                             <svg data-anim="slide-down" width="28" height="42" viewBox="0 0 28 42" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -478,7 +481,8 @@ document.addEventListener("DOMContentLoaded", () => {
                                     <div class="col-12 col-md-11 col-lg-10 mx-auto">
                                         <div class="story-description">
                                             <div class="title-section" data-anim="fade-down">
-                                                <h2>In God’s Perfect Time</h2>
+                                                <h7>In God’s</h7>
+                                                <h2>Perfect Time</h2>
                                             </div>
                                             <div class="row justify-content-center my-4">
                                                 <div class="col-6 col-md-5 text-center">
@@ -707,11 +711,11 @@ document.addEventListener("DOMContentLoaded", () => {
                                                             <!-- Dress Code Section -->
                                                             <div class="dress-code" data-anim="fade-up">
                                                                 <h4>Dress Code</h4>
-                                                                <p>Formal Black (Garden Party)</p>
+                                                                <p>Elegant in Black</p>
                                                                     <div class="dresscode-photo">
                                                                         <img src="./assets/images/formal-black.png" alt="formal-black">
                                                                     </div>
-                                                                <p>As it's a garden party, kindly choose formal attire you'll feel comfortable in</p>
+                                                                <p>Elegance in black, with comfort in mind as it’s a garden party</p>
                                                             </div>
                                                             <div class="widget-elements">
                                                                 <a class="btn btn-custom mt-3" aria-label="button maps" href="#" data-bs-toggle="modal" data-bs-target="#event2">See Location</a>
@@ -1198,6 +1202,12 @@ document.addEventListener("DOMContentLoaded", () => {
                                             <li class="splide__slide position-relative">
                                                     <img src="./assets/images/photo18.jfif" alt="img-gallery" class="img-gallery" />
                                             </li>
+                                            <li class="splide__slide position-relative">
+                                                    <img src="./assets/images/photo19.jfif" alt="img-gallery" class="img-gallery" />
+                                            </li>
+                                            <li class="splide__slide position-relative">
+                                                    <img src="./assets/images/photo20.jfif" alt="img-gallery" class="img-gallery" />
+                                            </li>
                                         </ul>
                                     </div>
                                 </div>
@@ -1231,6 +1241,7 @@ document.addEventListener("DOMContentLoaded", () => {
                  <div style="position: relative; z-index: 1;">
                    <h2 data-anim='fade-down' style='font-size: 2rem; margin-bottom: 8px;'>Thank You</h2>
                     <p data-anim='zoom-out' style='font-size: 1rem;'>See you at the celebration!</p>
+                    <p data-anim='zoom-out' style='font-size: 1rem;'>#STEVoundSTELLA</p>
                  </div>
                 </section>
 
